--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "tokyo-panda-theme",
+  "name": "Tokyo Panda",
   "publisher": "effordDev",
   "version": "1.1.0",
   "description": "A cats favourite colours - a VS Code Theme (mix of Tokyo Night + Panda Theme)",
