--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
 {
   "name": "Tokyo-Panda",
   "publisher": "effordDev",
-  "version": "1.1.0",
+  "version": "1.2.0",
   "description": "A cats favourite colours - a VS Code Theme (mix of Tokyo Night + Panda Theme)",
   "author": "effordDev",
   "license": "MIT",
-  "maintainers": ["Reid <dev@tokyotech.us>"],
+  "maintainers": [
+    "Reid <dev@tokyotech.us>"
+  ],
   "engines": {
     "vscode": "^1.81.1"
   },
