--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "tokyo-panda-theme",
+  "displayName": "Tokyo Panda",
   "publisher": "effordDev",
   "version": "1.2.0",
   "description": "A cats favourite colours - a VS Code Theme (mix of Tokyo Night + Panda Theme)",
