--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "displayName": "Tokyo Panda",
   "publisher": "effordDev",
   "version": "1.10.0",
-  "description": "A cats favourite colours - a VS Code Theme (mix of Tokyo Night + Panda Theme)",
+  "description": "A VS Code Theme (mix of Tokyo Night + Panda Theme)",
   "author": "effordDev",
   "license": "MIT",
   "maintainers": [
